--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
       <button onclick="Telegram.WebApp.expand();">Expand Webview</button>
       <button onclick="toggleMainButton();">Toggle Main Button</button>
       <button onclick="sendData();">Send Data</button>
+      <!-- 关闭按钮 -->
+      <button onclick="Telegram.WebApp.close();">Close</button>
     </main>
     <div id="viewport"></div>
     <div id="viewport-params-size"></div>
