--- a/index.html
+++ b/index.html
@@ -184,11 +184,7 @@
       });
 
       function sendData() {
-        Telegram.WebApp.sendData({
-          data: {
-            text: "Hello World!",
-          },
-        });
+        Telegram.WebApp.sendData('text');
       }
     </script>
 
