--- a/index.html
+++ b/index.html
@@ -100,14 +100,38 @@
         </li>
         <li>
           <a
-            href="javascript:Telegram.WebApp.openTelegramLink('https://ton.org/');"
-            >Open external link within Telegram（openTelegramLink）</a
+            href="javascript:Telegram.WebApp.openLink('https://t.me/trendingapps',{try_instant_view:true});"
+            >Open tg link within Telegram （openLink）</a
           >
         </li>
         <li>
           <a
-            href="javascript:Telegram.WebApp.openLink('https://t.me/trendingapps');"
-            >Open tg link within Telegram （openLink）</a
+            href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/TonCn123');"
+            >@TonCn123</a
+          >
+        </li>
+        <li>
+          <a
+            href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/bangzhu01');"
+            >@bangzhu01</a
+          >
+        </li>
+        <li>
+          <a
+            href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/TGJB8');"
+            >@TGJB8</a
+          >
+        </li>
+        <li>
+          <a
+            href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/liangjianshequ');"
+            >@liangjianshequ</a
+          >
+        </li>
+        <li>
+          <a
+            href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/DINGDANGSQ');"
+            >@DINGDANGSQ</a
           >
         </li>
       </ul>
