--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
       </button>
       <button onclick="showPopup();">Launch Popup</button>
 
+      <div style="height: 100vh;"></div>
+
       <h1>Links</h1>
       <ul>
         <li>
