--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </button>
       <button onclick="showPopup();">Launch Popup</button>
 
-      <div style="height: 100vh;"></div>
+      <div style="height: 100vh"></div>
 
       <h1>Links</h1>
       <ul>
@@ -134,6 +134,18 @@
           <a
             href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/DINGDANGSQ');"
             >@DINGDANGSQ</a
+          >
+        </li>
+        <li>
+          <a
+            href="javascript:Telegram.WebApp.openLink('https://t.me/liangjianshequ',{try_instant_view:true});"
+            >@liangjianshequ（openLink）</a
+          >
+        </li>
+        <li>
+          <a
+            href="javascript:Telegram.WebApp.openLink('https://t.me/DINGDANGSQ',{try_instant_view:true});"
+            >@DINGDANGSQ （openLink）</a
           >
         </li>
       </ul>
