--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
 
       <div style="height: 100vh"></div>
 
+      <div style="height: 300px; overflow-y: auto;">
+        <div style="height: 500px; background-color: bisque"></div>
+      </div>
+
       <h1>Links</h1>
       <ul>
         <li>
